--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -13,6 +13,7 @@
 
 .pagination button {
   width: 32px;
+  max-width: 32px;
   height: 32px;
   border: 1px solid #ccc;
   background: transparent;
