--- a/src/components/ProductFilter/ProductFilter.module.css
+++ b/src/components/ProductFilter/ProductFilter.module.css
@@ -26,7 +26,7 @@ span {
   height: 14px;
   background-color: #e1dfe1;
 }
-h1 {
+.h1 {
   font-family: Poppins;
   font-weight: 600;
   font-style: SemiBold;
@@ -34,6 +34,7 @@ h1 {
   color: #10151f;
   line-height: 100%;
   letter-spacing: 0%;
+  margin-bottom: 0px;
 }
 
 .res {
@@ -185,4 +186,10 @@ ul li {
   width: 12px;
   height: 12px;
   cursor: pointer;
+}
+@media screen and (max-width:750px){
+  .filter_line{
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
