--- a/src/components/ProductsContainer/ProductsContainer.module.css
+++ b/src/components/ProductsContainer/ProductsContainer.module.css
@@ -1,19 +1,40 @@
 .container{
     width: 100%;
     display: grid;
-    height: 1938px;
+    /* height: 1938px; */
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 24px;
     column-gap: 48px;
 }
-.card{
+/* .card{
 width: 412px;
 height: 614px;
 
-}
+} */
 .card img{
     width: 100%;
     height:549px;
     border-radius: 10px;
     object-fit: cover;
+}
+
+@media screen  and (max-width:1300px){
+   .container{
+  
+    grid-template-columns: 1fr 1fr 1fr;
+ 
+} 
+}
+@media screen  and (max-width:900px){
+   .container{
+  
+    grid-template-columns: 1fr 1fr;
+ 
+} }
+@media screen  and (max-width:500px){
+   .container{
+  
+    grid-template-columns: 1fr;
+ 
+} 
 }
